# mawatam

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
datam-tools/: Collatz.py  Collatz_circuits.py  four_tiles_circuits.py  four_tiles_curiosity.py  majority.txt  powers_of_two.py  requirements.txt
datam-tools/datam/: __init__.py  configuration.py  tileset.py  tileset_collection.py
examples/: Collatz_configuration.txt  Collatz_configuration.yml  binary_counter.yml  binary_counter_2.yml  powers_of_two.yml
mawatam-tools/: Collatz.py  Collatz_circuits.py  Collatz_forward.py  all_2x1_Boolean_gates.txt  four_tiles_circuits.py  four_tiles_curiosity.py  powers_of_two.py
mawatam-tools/mawatam/: __init__.py  configuration.py  tileset.py  tileset_collection.py
src/: camera.cpp  config.h  config.h.in  main.cpp  parser.cpp  parser.h  simulator.cpp  simulator.h  utils.h  vertices.cpp  view.cpp  view.h  wheels.h  world.cpp  world.h
src/yaml/: Yaml.cpp
